--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: black;
+  background-color: #272626; /* Change to your desired color */
   display: flex;
   justify-content: center; /* Horizontally center */
   align-items: center; /* Vertically center */
