--- a/src/components/css/Profile.css
+++ b/src/components/css/Profile.css
@@ -1,5 +1,7 @@
 .profile {
   text-align: center; /* Memusatkan teks */
+  background-color: #272626; /* Change to your desired color */
+
 }
 
 .profile-picture {
