--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -29,20 +29,48 @@
   margin-top: 40px;
 }
 
-.link-pdf {
-  background-color: transparent; /* Membuat tombol transparan */
-  border: 2px solid #007bff; /* Ganti dengan warna yang diinginkan */
-  color: #007bff; /* Ganti dengan warna teks yang diinginkan */
-  padding: 10px 20px; /* Padding tombol */
-  text-decoration: none; /* Menghilangkan garis bawah */
-  border-radius: 5px; /* Membuat sudut tombol melengkung */
-  cursor: pointer; /* Menunjukkan bahwa ini dapat diklik */
-  transition: background-color 0.3s; /* Animasi transisi */
-  margin-right: 10px; /* Jarak antar tombol */
-  margin-top: 30px;
+/* Container untuk link agar berdampingan */
+.link-container {
+  display: flex;
+  justify-content: center; /* Agar link berada di tengah secara horizontal */
+  gap: 10px; /* Jarak antara kedua link */
+  margin-top: 30px; /* Tambahan jarak atas */
 }
 
+/* CSS untuk link-pdf */
+.link-pdf {
+  background-color: transparent;
+  border: 2px solid red;
+  color: red;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+/* CSS saat link-pdf di-hover */
 .link-pdf:hover {
-  background-color: #007bff; /* Warna latar belakang saat hover */
-  color: white; /* Warna teks saat hover */
+  background-color: red;
+  color: white;
+}
+
+/* CSS untuk link-telegram */
+.link-telegram {
+  display: inline-flex; /* Gunakan flexbox untuk elemen inline */
+  align-items: center; /* Center secara vertikal */
+  background-color: #007bff;
+  border: 2px solid  rgb(176, 120, 250);
+  color:  #ffffff;
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+/* CSS saat link-telegram di-hover */
+.link-telegram:hover {
+  background-color: rgb(176, 120, 250);
+  color: rgb(255, 255, 255);
 }
