add page about, about css, header, and update homepage

--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -13,3 +13,7 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-style: normal;
 }
+
+body, html {
+  background-color: #272626;
+}
