--- a/src/components/css/Icon.css
+++ b/src/components/css/Icon.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center; /* Center secara vertikal */
   justify-content: center; /* Center secara horizontal */
-  padding: 80px;
+  padding: 50px;
   background-color: #272626; /* Change to your desired color */
 
 }
@@ -35,31 +35,38 @@
   transform: scale(1.5); /* Efek zoom pada ikon saat hover */
 }
 
-/* Styling heading */
 .heading-icon {
   display: flex;
-  justify-content: center; /* Center secara horizontal */
-  align-items: center; /* Center secara vertikal */
+  justify-content: center;
+  align-items: center;
   font-size: 24px; /* Ukuran font default */
-  margin-bottom: 20px; /* Jarak antara heading dan ikon */
+  margin-bottom: 10px;
   color: aliceblue;
+  text-align: center; /* Memastikan teks berada di tengah */
+  white-space: normal; /* Memungkinkan teks membungkus ke baris berikutnya */
+  word-wrap: break-word; /* Memaksa pembungkusan kata jika perlu */
 }
 
 /* Media query untuk perangkat dengan lebar maksimal 600px (smartphone) */
 @media (max-width: 600px) {
+ .icon-container {
+    gap: 5px; /* Memberikan jarak antar heading dan ikon */
+  }
+
   .heading-icon {
-    font-size: 18px; /* Ukuran font lebih kecil di layar kecil */
-    margin-bottom: 15px; /* Mengurangi jarak antara heading dan ikon */
+    font-size: 15px; /* Ukuran font tidak terlalu kecil */
+    margin-bottom: 20px;
   }
 }
 
 /* Media query untuk perangkat dengan lebar maksimal 400px (layar kecil seperti ponsel) */
 @media (max-width: 400px) {
   .heading-icon {
-    font-size: 16px; /* Ukuran font lebih kecil lagi di layar sangat kecil */
-    margin-bottom: 10px; /* Jarak antara heading dan ikon lebih kecil */
+    font-size: 15px; /* Ukuran font masih tetap terlihat */
+    margin-bottom: 20px;
   }
 }
+
 
 /* Container untuk ikon-ikon dengan jarak antar ikon */
 .icon-links-container {
