--- a/src/components/css/Profile.css
+++ b/src/components/css/Profile.css
@@ -1,13 +1,14 @@
 .profile {
-  text-align: center; /* Memusatkan teks */
-
+  flex: 1; /* Foto menempati ruang yang sama */
+  display: flex;
+  justify-content: center; /* Pusatkan gambar di dalam div */
+  padding-right: 40px;
 }
 
 .profile-picture {
   border-radius: 50%; /* Membuat gambar berbentuk lingkaran */
   width: 450px; /* Atur lebar gambar */
-  height: 450px; /* Sesuaikan tinggi gambar agar sama dengan lebar */
-  margin-top: 10px;
+  height: 480px; /* Sesuaikan tinggi gambar agar sama dengan lebar */
   object-fit: cover; /* Menjaga proporsi gambar saat berubah bentuk */
 }
 
