--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,14 +1,20 @@
 .header {
   display: flex;
-  justify-content: center; /* Horizontally center */
-  align-items: center; /* Vertically center */
-  height: 100px; /* Adjust height as needed */
-  color: aliceblue;
+  justify-content: space-between; /* Membuat jarak maksimal antara elemen */
+  align-items: center; /* Memastikan vertikal rata tengah */
+  padding: 0 40px; /* Beri padding agar tidak terlalu mepet */
+  margin-top: 20px;
 }
 
-.heading-header {
-  margin-top: 150px;
-  font-size: large;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-style: normal;
+.heading-name{
+  display: flex;
+  justify-content: space-between;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: black;
+  padding-left: 80px; /* Beri padding agar tidak terlalu mepet */
+
+}
+
+.icon-right {
+  margin-left: auto; /* Mendorong ikon ke kanan */
 }
