--- a/src/components/css/Homepage.css
+++ b/src/components/css/Homepage.css
@@ -1,6 +1,6 @@
 body, html {
   height: 100%; /* Pastikan body dan html mengisi seluruh layar */
-  background: linear-gradient(to bottom, #272626, #4b4b4b); /* Gradasi dari #272626 ke #4b4b4b */
+  background: white;
   margin: 0; /* Menghilangkan margin default */
   font-family: Arial, sans-serif; /* Font yang responsif */
   color: white; /* Pastikan teks berwarna putih agar kontras dengan latar belakang gelap */
@@ -10,7 +10,7 @@ body, html {
 @media (max-width: 600px) {
   body, html {
     /* Menyesuaikan gradasi agar lebih smooth di layar kecil */
-    background: radial-gradient(circle, #272626, #4b4b4b); /* Gradasi melingkar dari tengah */
+    background: white
   }
 }
 
@@ -18,6 +18,6 @@ body, html {
 @media (max-width: 400px) {
   body, html {
     /* Menambahkan penyesuaian lebih lanjut jika diperlukan */
-    background: radial-gradient(circle, #272626, #4b4b4b); /* Gradasi melingkar dari tengah */
+    background: white
   }
 }
