--- a/src/components/css/Experience.css
+++ b/src/components/css/Experience.css
@@ -13,7 +13,7 @@
     justify-content: center; /* Pusatkan ikon secara horizontal */
     align-items: center; /* Pusatkan ikon secara vertikal */
     gap: 30px; /* Menambahkan jarak antar ikon */
-    margin-bottom: 30px; /* Memberikan jarak antara dua baris ikon */
+    margin-bottom: 3    0px; /* Memberikan jarak antara dua baris ikon */
   }
   
   
