--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -30,6 +30,13 @@
   padding-left: 40px; /* Beri padding agar tidak terlalu mepet */
 }
 
+.paragraph{
+  color: black;
+  font-size: 18px;
+  font-family: monospace;
+  padding-left: 40px;
+}
+
 .new-line {
   display: block; /* Memastikan teks turun ke baris baru */
   font-size: 50px;
@@ -88,4 +95,99 @@
 .link-telegram:hover {
   background-color: rgb(176, 120, 250);
   color: rgb(255, 255, 255);
+}
+
+/* RESPONSIVE DESIGN */
+@media (max-width: 1024px) {
+  .about {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Pusatkan vertikal */
+    display: flex; /* Pastikan flexbox aktif */
+  }
+
+  .name{
+    text-align: right;
+    padding-top: 100px;
+    align-items: center;
+
+    }
+
+
+  .text-container {
+    padding: 0;
+  }
+
+  .new-line,
+  .new-line-2 {
+    font-size: 28px;
+  }
+
+  .link-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Pusatkan tombol */
+  }
+
+  .profile {
+    display: flex;
+    justify-content: center;
+    width: 1000%;
+  }
+
+  .profile-picture {
+    width: 2500px;
+    height: 2500px;
+    border: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Pusatkan vertikal */
+    text-align: center;
+    height: 60vh; /* Biar tetap memenuhi layar */
+    margin-bottom: 0px;
+    padding: auto;
+  }
+
+  .name{
+    padding: 0px;  
+    }
+.paragraph{
+  padding: 0px;
+  text-align: center;
+}
+  .text-container {
+    max-width: 90%;
+  }
+
+  .new-line,
+  .new-line-2 {
+    font-size: 24px;
+  }
+
+  .description {
+    font-size: 16px;
+  }
+
+  .profile {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .profile-picture {
+    width: 200px;
+    height: 200px;
+    border: none;
+  }
+
+  .link-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Pusatkan tombol */
+  }
 }
