--- a/src/components/css/Work.css
+++ b/src/components/css/Work.css
@@ -9,6 +9,7 @@
 
   .work {
     margin-top: 8px; /* Memberikan sedikit jarak antara elemen */
+    font-size: small;
   }
 
   @media (max-width: 1024px) {
