--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -28,6 +28,7 @@
   margin-top: 30px;
   margin-bottom: 0px;
   padding-left: 40px; /* Beri padding agar tidak terlalu mepet */
+  font-size: 80px;
 }
 
 .paragraph{
